# buildseal-api-

./: .deploy-trigger  .dockerignore  .gitignore  Dockerfile  cross-check-001_v5_pack.json  cross-test-001_v5_pack.json  index.html  index.js  index.js.bak  index.js.bak2  index.js.save  isc_pack_v5_bin  package-lock.json  package.json  test_seal_001_v5_pack.json  verify.html
isc_pack_v5/: Cargo.toml  test-tampered.json
isc_pack_v5/src/: main.rs
public/: nym.html  verify.html
