[package]
# cache-bust: 2
name = "isc_pack_v5"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde_json = "1"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
ureq = { version = "3.3", features = ["native-tls"] }
